--- a/.mocharc.json
+++ b/.mocharc.json
@@ -1,5 +1,8 @@
 {
   "extension": ["ts"],
   "spec": "**/*.test.ts",
-  "require": "ts-node/register"
+  "node-option": [
+    "import=tsx",
+    "experimental-specifier-resolution=node"
+  ]
 }
